# Facial-Recognition

./: README.md  blur_faces_on_webcam.py  displacement.py  escalation.py  facerec_from_video_file.py  histogram_from_camera_video.py  increase_sharpness.py  index.py  periodic_signal.py  pyproject.toml  pyvenv.cfg  requirements.txt  smile_detection.py
face_recognition.egg-info/: PKG-INFO
templates/: index.html
