[tool.poetry]
name = "face_recognition"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <danrley_polyana_s2@dwcorp.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add your dependencies here
pillow = "^10.2.0"
cmake = "^3.28.3"
dlib = "^19.24.2"
opencv-python = "^4.9.0.80"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
